atualizando a parte de saida do projeto

--- a/Untitled2.ipynb
+++ b/Untitled2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOMPvruvzV7fNJ6KDsZzi2u",
+      "authorship_tag": "ABX9TyNbVQ/Qcn2mBYAYQFxpN8Z7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -42,65 +42,66 @@
       "source": [
         "import google.generativeai as genai\n",
         "\n",
-        "# Configure a API Key\n",
         "GOOGLE_API_KEY = \"AIzaSyAmw_X2a2TjxDHv0t5xPsu_tQ_bwoKGQ0g\"\n",
         "genai.configure(api_key=GOOGLE_API_KEY)\n",
         "\n",
-        "# Inicialize o modelo de chatbot de entretenimento\n",
         "model = genai.GenerativeModel(model_name=\"gemini-1.0-pro\")\n",
         "\n",
         "# Função para interagir com o chatbot de entretenimento\n",
         "def chatbot_de_entretenimento():\n",
         "    continuar_conversa = True\n",
         "    while continuar_conversa:\n",
-        "        print(\"Olá! Eu sou o Chatbot de Entretenimento. Como posso te entreter hoje?\")\n",
-        "        prompt = input(\"Escolha uma opção: \\n1. Piadas \\n2. Recomendação de Filmes/Séries \\n3. Jogos \\n4. Sair \\nDigite o número da opção desejada: \")\n",
-        "\n",
-        "        if prompt == \"1\":\n",
-        "            print(\"Ótimo! Vou contar uma piada para você:\")\n",
-        "            response = model.generate_content(\"Conte uma piada engraçada.\")\n",
-        "            print(response.text)\n",
-        "            print(\"E então, o que você acha da piada?\")\n",
-        "            resposta_piada = input(\"Sua resposta: \").strip()\n",
-        "            # Lógica para lidar com a resposta do usuário\n",
-        "            print(\"Obrigado por compartilhar sua opinião!\")\n",
-        "\n",
-        "        elif prompt == \"2\":\n",
-        "            print(\"Legal! Posso te ajudar a encontrar um filme ou série. Qual gênero você prefere?\")\n",
-        "            genero = input(\"Digite o gênero desejado: \")\n",
-        "            response = model.generate_content(f\"Recomende um filme ou série de {genero}.\")\n",
-        "            print(response.text)\n",
-        "            conversar = input(\"Gostaria de conversar mais sobre estes filmes/séries? (Sim/Não): \").lower()\n",
-        "            if conversar == \"sim\":\n",
-        "                filme = input(\"Digite o filme que deseja conversar mais: \")\n",
-        "                resposta = model.generate_content(f\"Fale sobre o filme {filme}.\")\n",
-        "                print(resposta.text)\n",
-        "        elif prompt == \"3\":\n",
-        "            print(\"Legal! Você quer criar um jogo instantaneamente para nós jogarmos agora ou prefere que eu recomende algum jogo?\")\n",
-        "            escolha_jogo = input(\"Digite 'Criar' para criar um jogo instantaneamente ou 'Recomendar' para uma recomendação de jogo: \").lower()\n",
-        "            if escolha_jogo == \"criar\":\n",
-        "                print(\"Ótimo! Vamos criar um jogo instantaneamente.\")\n",
-        "                response = model.generate_content(\"Vamos criar um jogo.\")\n",
+        "        try:\n",
+        "            print(\"Olá! Eu sou o Chatbot de Entretenimento. Como posso te entreter hoje?\")\n",
+        "            prompt = input(\"Escolha uma opção: \\n1. Piadas \\n2. Recomendação de Filmes/Séries \\n3. Jogos \\n4. Sair \\nDigite o número da opção desejada: \")\n",
+        "            if prompt == \"1\":\n",
+        "                print(\"Ótimo! Vou contar uma piada para você:\")\n",
+        "                response = model.generate_content(\"Conte uma piada engraçada.\")\n",
         "                print(response.text)\n",
-        "                # Lógica para criar um jogo instantaneamente\n",
-        "            elif escolha_jogo == \"recomendar\":\n",
-        "                print(\"Entendi! Posso te ajudar a encontrar um jogo. Qual tipo de jogo você está procurando?\")\n",
-        "                tipo_jogo = input(\"Digite o tipo de jogo desejado: \")\n",
-        "                response = model.generate_content(f\"Recomende um jogo de {tipo_jogo}.\")\n",
+        "                print(\"E então, o que você acha da piada?\")\n",
+        "                resposta_piada = input(\"Sua resposta: \").strip()\n",
+        "                print(\"Obrigado por compartilhar sua opinião!\")\n",
+        "\n",
+        "            elif prompt == \"2\":\n",
+        "                print(\"Legal! Posso te ajudar a encontrar um filme ou série. Qual gênero você prefere?\")\n",
+        "                genero = input(\"Digite o gênero desejado: \")\n",
+        "                response = model.generate_content(f\"Recomende um filme ou série de {genero}.\")\n",
         "                print(response.text)\n",
-        "                conversar_jogo = input(\"Gostaria de falar mais sobre este jogo? (Sim/Não): \").lower()\n",
-        "                if conversar_jogo == \"sim\":\n",
-        "                    resposta_jogo = model.generate_content(f\"Conversemos mais sobre {response.text}.\")\n",
-        "                    print(resposta_jogo.text)\n",
+        "                conversar = input(\"Gostaria de conversar mais sobre estes filmes/séries? (Sim/Não): \").lower()\n",
+        "                if conversar == \"sim\":\n",
+        "                    filme = input(\"Digite o filme que deseja conversar mais: \")\n",
+        "                    resposta = model.generate_content(f\"Fale sobre o filme {filme}.\")\n",
+        "                    print(resposta.text)\n",
+        "            elif prompt == \"3\":\n",
+        "                print(\"Legal! Você quer criar um jogo instantaneamente para nós jogarmos agora ou prefere que eu recomende algum jogo?\")\n",
+        "                escolha_jogo = input(\"Digite 'Criar' para criar um jogo instantaneamente ou 'Recomendar' para uma recomendação de jogo: \").lower()\n",
+        "                if escolha_jogo == \"criar\":\n",
+        "                    print(\"Ótimo! Vamos criar um jogo instantaneamente.\")\n",
+        "                    response = model.generate_content(\"Vamos criar um jogo.\")\n",
+        "                    print(response.text)\n",
+        "                elif escolha_jogo == \"recomendar\":\n",
+        "                    print(\"Entendi! Posso te ajudar a encontrar um jogo. Qual tipo de jogo você está procurando?\")\n",
+        "                    tipo_jogo = input(\"Digite o tipo de jogo desejado: \")\n",
+        "                    response = model.generate_content(f\"Recomende um jogo de {tipo_jogo}.\")\n",
+        "                    print(response.text)\n",
+        "                    conversar_jogo = input(\"Gostaria de falar mais sobre este jogo? (Sim/Não): \").lower()\n",
+        "                    if conversar_jogo == \"sim\":\n",
+        "                        resposta_jogo = model.generate_content(f\"Conversemos mais sobre {response.text}.\")\n",
+        "                        print(resposta_jogo.text)\n",
+        "                else:\n",
+        "                    print(\"Opção inválida. Por favor, escolha 'Criar' ou 'Recomendar'.\")\n",
+        "\n",
+        "            elif prompt == \"4\":\n",
+        "                print(\"Saindo do chatbot de entretenimento...\")\n",
+        "                continuar_conversa = False\n",
+        "\n",
         "            else:\n",
-        "                print(\"Opção inválida. Por favor, escolha 'Criar' ou 'Recomendar'.\")\n",
-        "\n",
-        "        elif prompt == \"4\":\n",
-        "            print(\"Saindo do chatbot de entretenimento...\")\n",
-        "            continuar_conversa = False\n",
-        "\n",
-        "        else:\n",
-        "            print(\"Opção inválida. Por favor, escolha uma opção válida.\")\n",
+        "                print(\"Opção inválida. Por favor, escolha uma opção válida.\")\n",
+        "        except KeyboardInterrupt:\n",
+        "            print(\"\\nEncerrando o chatbot de entretenimento...\")\n",
+        "            break\n",
+        "        except Exception as e:\n",
+        "            print(\"Ocorreu um erro ao processar sua solicitação. Por favor, tente novamente.\")\n",
         "\n",
         "# Iniciar o chatbot de entretenimento\n",
         "chatbot_de_entretenimento()"
@@ -108,32 +109,80 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 351
+          "height": 1000
         },
         "id": "-vvb0KyIda2y",
-        "outputId": "19cce76a-5623-4195-ea8f-23e68d6e4772"
+        "outputId": "ca22fde4-1044-423a-ef47-576802ee0d5b"
       },
-      "execution_count": 16,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Olá! Eu sou o Chatbot de Entretenimento. Como posso te entreter hoje?\n"
-          ]
-        },
-        {
-          "output_type": "error",
-          "ename": "KeyboardInterrupt",
-          "evalue": "Interrupted by user",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-16-cfafe55d74a0>\u001b[0m in \u001b[0;36m<cell line: 64>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     62\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     63\u001b[0m \u001b[0;31m# Iniciar o chatbot de entretenimento\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 64\u001b[0;31m \u001b[0mchatbot_de_entretenimento\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;32m<ipython-input-16-cfafe55d74a0>\u001b[0m in \u001b[0;36mchatbot_de_entretenimento\u001b[0;34m()\u001b[0m\n\u001b[1;32m     13\u001b[0m     \u001b[0;32mwhile\u001b[0m \u001b[0mcontinuar_conversa\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Olá! Eu sou o Chatbot de Entretenimento. Como posso te entreter hoje?\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 15\u001b[0;31m         \u001b[0mprompt\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Escolha uma opção: \\n1. Piadas \\n2. Recomendação de Filmes/Séries \\n3. Jogos \\n4. Sair \\nDigite o número da opção desejada: \"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     16\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mprompt\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m\"1\"\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/ipykernel/kernelbase.py\u001b[0m in \u001b[0;36mraw_input\u001b[0;34m(self, prompt)\u001b[0m\n\u001b[1;32m    849\u001b[0m                 \u001b[0;34m\"raw_input was called, but this frontend does not support input requests.\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    850\u001b[0m             )\n\u001b[0;32m--> 851\u001b[0;31m         return self._input_request(str(prompt),\n\u001b[0m\u001b[1;32m    852\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_parent_ident\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    853\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_parent_header\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/ipykernel/kernelbase.py\u001b[0m in \u001b[0;36m_input_request\u001b[0;34m(self, prompt, ident, parent, password)\u001b[0m\n\u001b[1;32m    893\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mKeyboardInterrupt\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    894\u001b[0m                 \u001b[0;31m# re-raise KeyboardInterrupt, to truncate traceback\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 895\u001b[0;31m                 \u001b[0;32mraise\u001b[0m \u001b[0mKeyboardInterrupt\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Interrupted by user\"\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    896\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mException\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    897\u001b[0m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlog\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwarning\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Invalid Message:\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mexc_info\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m: Interrupted by user"
+            "Olá! Eu sou o Chatbot de Entretenimento. Como posso te entreter hoje?\n",
+            "Escolha uma opção: \n",
+            "1. Piadas \n",
+            "2. Recomendação de Filmes/Séries \n",
+            "3. Jogos \n",
+            "4. Sair \n",
+            "Digite o número da opção desejada: 2\n",
+            "Legal! Posso te ajudar a encontrar um filme ou série. Qual gênero você prefere?\n",
+            "Digite o gênero desejado: terror\n",
+            "**Filmes:**\n",
+            "\n",
+            "* **Hereditário (2018):** Um filme psicológico que explora os segredos sombrios de uma família e as consequências aterrorizantes de sua história oculta.\n",
+            "* **Invocação do Mal (2013):** Um filme baseado em fatos reais sobre uma família assombrada por espíritos malignos e a investigação paranormal realizada por Ed e Lorraine Warren.\n",
+            "* **Corra! (2017):** Um filme de terror social que explora o racismo e os perigos de confiança cega.\n",
+            "* **A Bruxa (2015):** Um filme de época atmosférico e arrepiante que retrata uma família puritana isolada que enfrenta o mal sobrenatural.\n",
+            "* **O Babadook (2014):** Um filme psicológico que explora os medos e traumas de uma mãe e seu filho enquanto eles lutam contra um monstro fictício que representa seus próprios demônios.\n",
+            "\n",
+            "**Séries:**\n",
+            "\n",
+            "* **Hill House Mal-Assombrada (2018):** Uma série antológica de terror que segue diferentes famílias que habitam uma casa mal-assombrada ao longo do tempo.\n",
+            "* **A Maldição da Residência Hill (2018):** Uma série que adapta o romance clássico de Shirley Jackson sobre uma família que se muda para uma mansão assombrada.\n",
+            "* **O Exorcista (2016):** Uma série prequela do filme icônico de 1973, que segue o Padre Tomás Ortega enquanto ele investiga casos de possessão demoníaca.\n",
+            "* **Marianne (2019):** Uma série francesa que acompanha uma romancista de terror que retorna à sua cidade natal para enfrentar os espíritos que inspiraram seus livros.\n",
+            "* **Lovecraft Country (2020):** Uma série que combina terror, história americana e fantasia, seguindo um grupo de viajantes que enfrenta o racismo e criaturas sobrenaturais no sul dos Estados Unidos na década de 1950.\n",
+            "Gostaria de conversar mais sobre estes filmes/séries? (Sim/Não): sim\n",
+            "Digite o filme que deseja conversar mais: a bruxa\n",
+            "**A Bruxa**\n",
+            "\n",
+            "**Enredo:**\n",
+            "\n",
+            "Lançado em 2015, A Bruxa é um filme de terror psicológico dirigido por Robert Eggers. O filme é ambientado na Nova Inglaterra do século XVII e conta a história da família puritana, a família Sorn, que se muda para um assentamento remoto na orla de uma floresta assombrada.\n",
+            "\n",
+            "Após o desaparecimento de seu bebê recém-nascido, a família começa a suspeitar de bruxaria. A paranoia e o medo crescem à medida que eventos estranhos e inexplicáveis ​​acontecem, incluindo a descoberta de um objeto amaldiçoado e o comportamento cada vez mais perturbador de Thomasin (Anya Taylor-Joy), a filha mais velha da família.\n",
+            "\n",
+            "**Temática:**\n",
+            "\n",
+            "* **Culpa e punição:** Os Sorn são oprimidos pela culpa após a morte de seu bebê, e essa culpa manifesta-se em sua crença em bruxaria.\n",
+            "* **Superstição e fanatismo:** A sociedade puritana do filme é dominada pela superstição e pelo fanatismo religioso, levando a acusações infundadas e perseguição.\n",
+            "* **Isolamento e alienação:** A família Sorn é isolada do resto da comunidade e cercada por uma floresta ameaçadora, o que aumenta sua vulnerabilidade e paranoia.\n",
+            "\n",
+            "**Estilo:**\n",
+            "\n",
+            "A Bruxa é notável por seu estilo realista e atmosférico. O filme foi filmado com lentes autênticas do século XVII e em locações reais, criando um forte senso de autenticidade. A trilha sonora minimalista e o uso de luz natural contribuem para a sensação de isolamento e pavor.\n",
+            "\n",
+            "**Elenco:**\n",
+            "\n",
+            "* **Anya Taylor-Joy:** Thomasin, a filha mais velha da família Sorn\n",
+            "* **Ralph Ineson:** William, o pai da família\n",
+            "* **Kate Dickie:** Katherine, a mãe da família\n",
+            "* **Harvey Scrimshaw:** Caleb, o filho mais novo da família\n",
+            "* **Ellie Grainger:** Mercy, a irmã mais nova de Thomasin\n",
+            "\n",
+            "**Recepção:**\n",
+            "\n",
+            "A Bruxa recebeu elogios da crítica por sua atmosfera imersiva, tensão arrepiante e performances assustadoras. O filme foi indicado a vários prêmios, incluindo o Oscar de Melhor Direção. Tornou-se um clássico moderno do gênero terror.\n",
+            "Olá! Eu sou o Chatbot de Entretenimento. Como posso te entreter hoje?\n",
+            "Escolha uma opção: \n",
+            "1. Piadas \n",
+            "2. Recomendação de Filmes/Séries \n",
+            "3. Jogos \n",
+            "4. Sair \n",
+            "Digite o número da opção desejada: 4\n",
+            "Saindo do chatbot de entretenimento...\n"
           ]
         }
       ]
